# hexengine

./: .gitignore  CARTESIAN_HEX_MAPPING.md  EXAMPLE_NEW_STATE_SYSTEM.py  MIGRATION_GUIDE.md  MULTIPLAYER_INTEGRATION.md  README.md  SERVER_ARCHITECTURE.md  commitmsg.txt  cspell.json  dev_console.py  git status  hexes.css  hexes.html  hexes.py  main.py  pyproject.toml  start_servers.py  test_preview_system.py  test_server.py  toggle_new_system.py
.cursor/plans/: generic_svg_unit_counter.plan.md
docs/: MULTIPLAYER_INTEGRATION.md  MULTIPLAYER_SUMMARY.md  OPERATOR_AUDIT.md  SERVER_ARCHITECTURE.md  STATE_SYSTEM_SUMMARY.md  TRANSITION_COMPLETE.md  WIRE_COMPATIBILITY.md  engine_game_boundary_matrix.md
examples/: network_game_example.py
games/alt_schedule/: __init__.py
games/hexdemo/: README.md  __init__.py  boot.py  combat.py  constants.py  focus.py  game_config.py  marker_rules.py  movement_rules.py  registry.py  turn_hooks.py
games/hexdemo/resources/: unit_counter.css  unit_template.css
hexengine/: __main__.py  dev_console.py  document.py  game.py  map.py
hexengine/hexes/: math.py  shapes.py  types.py
hexengine/map/: __init__.py  canvas.py  handler.py  layout.py  mouse_handler.py
resources/default/: global.css  unit_counter.css
resources/scenarios/test_scenario/: scenario.toml
scenarios/: test_scenario.toml
scenarios/test_scenario/: scenario.toml
src/: dev_console.py  engine.py  map.py
src/hexengine/: __init__.py  __main__.py  dev_console.py  document.py  excepthook.py  game.py  game_log.py  gameroot.py  package_version.py  units.py
src/hexengine/actions/: __init__.py  base.py  delete.py  move.py
src/hexengine/client/: __init__.py  browser_websocket_client.py  display_manager.py  global_styles.py  local_server.py  marker_manager.py  scenario_unit_graphics.py  svg_templates.py  ui_state.py  (+1 more)
src/hexes/: __init__.py  math.py  shapes.py  types.py
tests/: test_colors_palette.py  test_combat_hexdemo.py  test_game_log.py  test_gamedef.py  test_gameroot.py  test_hex_colrow.py  test_hex_rowcol.py  test_hexdemo_pack.py  test_hextml_coords.py  test_history.py  test_import_hextml_merge.py  test_map_grid_canvas.py  test_marker_placement.py  test_math.py  test_network.py  test_rng_service.py  test_scenario_pack_resources.py  test_scenario_positions.py  test_scenario_toml_errors.py  test_shapes.py  test_snapshot.py  test_terrain_groups.py  test_types.py  test_uniqueness.py  test_unit_archetypes.py  test_unit_display_pixel_size.py  test_unit_graphics_counter.py  test_zoc.py
tools/: import_hextml_map.py
(+98 files in other folders)
