[project]
name = "hexes"
version = "0.1.0"
description = "HTML game board with hexagonal tiles - Pyodide compatible"
readme = "README.md"
requires-python = ">=3.11"  # Pyodide supports 3.11+
dependencies = ["websockets>=12.0"]
authors = [
    {name = "Steve Theodore", email = "steve@theodox.com"}
]

[project.scripts]
hexserver = "hexengine.server.websocket_server:run"


[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
package-dir = {"" = "src"}


[tool.setuptools.packages.find]
where = ["src"]